<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical">

    <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="@string/custom_match_hint"/>

    <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            android:layout_gravity="end"/>

    <TextView
            android:id="@+id/instructionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/custom_match_instructions"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
            android:id="@+id/inputValidationSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/correct"
            android:text="@string/good_choice"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"/>

    <TextView
            android:id="@+id/inputValidationError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/incorrect"
            android:text="@string/bad_choice"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"/>

</LinearLayout>